microservices-demo-openshift/servicemesh/front-end-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: front-end-virtualservice
spec:
  hosts:
    - "*" 
  gateways:
    - sockshop-wildcard-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 80
        host: front-end
